# plugin-manager

./: .gitignore  Cargo.toml  build.rs  readme.md
.github/workflows/: build-and-release.yml
meta/: icon.icns
src/: app.rc  build.rs  main.rs  plugin_scanner.rs  plugin_types.rs
src/app/: gui.rs  mod.rs  selection.rs  state.rs
src/plugin/: mod.rs  types.rs  utils.rs
src/scanner/: core.rs  macos.rs  metadata.rs  mod.rs  windows.rs
