[package]
name = "PluginManager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
trash = "3.0"
rfd = "0.12"
anyhow = "1.0"
regex = "1.7"
dirs = "5.0"
once_cell = "1.19.0"
image = "0.24"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.11"
winapi = { version = "0.3", features = [
    "winver",
    "winuser",
    "minwindef",
] }

[build-dependencies]
embed-resource = "2.4"

[package.metadata.bundle]
name = "Plugin Manager"
identifier = "com.jxckgan.plugin-manager"
icon = ["meta/icon.icns"]
version = "1.0.0"
resources = []
copyright = "Copyright © 2025 jxckgan | MIT License"
category = "Utility"